--- a/kurumsal-site.html
+++ b/kurumsal-site.html
@@ -17,17 +17,20 @@ body {
     margin:auto;
     padding:50px 20px;
 }
+
+
 header {
     background:#111827;
     color:#fff;
-    padding:70px 20px;
+    text-align: center;
+    
 }
 header h1 {
     font-size:36px;
     margin-bottom:20px;
 }
 header p {
-    max-width:850px;
+    max-width:1100px;
 }
 header .author {
     margin-top:25px;
