--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Siber Güvenlik, Linux Sistemleri ve Web Teknolojileri konularında uzmanlaşmı
 
   <!-- GITHUB PROJECTS -->
   <section>
-    <h2>GitHub Projects</h2>
+    <h2>GitHub Projeleri</h2>
     <div id="repos" class="grid"></div>
   </section>
 
