--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Siber Güvenlik, Linux Sistemleri ve Web Teknolojileri konularında uzmanlaşmı
 
     <a class="card">
       <strong>Sunucu Güvenliği & Optimizasyonu</strong>
-      <span>Linux ve Windwos sunucular için güvenlik sıkılaştırması, performans optimizasyonu ve izleme çözümleri sağlar.</span>
+      <span>Linux ve Windows sunucular için güvenlik sıkılaştırması, performans optimizasyonu ve izleme çözümleri sağlar.</span>
     </a>
 
     <a class="card">
